--- a/CryoconM32App/Db/M32_control.template
+++ b/CryoconM32App/Db/M32_control.template
@@ -10,7 +10,7 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):SETPOINT") {
   field(DESC, "Setpoint Temp, loop $(loop).")
   field(SCAN, "$(scan) second")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getSetpointT($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getSetpointT($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -18,14 +18,14 @@ record(stringin, "$(tctrlr):STS:LOOP$(loop):LOOPTYPE") {
   field(DESC, "manual PID, table, OFF...")
   field(PINI, "YES")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopType($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopType($(loop)) $(port)")
 }
 
 record(stringin, "$(tctrlr):STS:LOOP$(loop):LOOPSOURCE") {
   field(DESC, "Sensor ch. loop controls.")
   field(PINI, "YES")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopSource($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopSource($(loop)) $(port)")
   field(FLNK, "$(tctrlr):CLC:LOOP$(loop):SRCRECORD PP MS")
 }
 
@@ -34,7 +34,7 @@ record(stringin, "$(tctrlr):STS:LOOP$(loop):LOOPRAMP") {
   field(SCAN, "$(scan) second")
   field(PINI, "YES")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopRamp($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopRamp($(loop)) $(port)")
 }
 
 record(ai, "$(tctrlr):STS:LOOP$(loop):RAMPRATE") {
@@ -42,7 +42,7 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):RAMPRATE") {
   field(SCAN, "$(scan) second")
   field(PINI, "YES")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopRampRate($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopRampRate($(loop)) $(port)")
   field(PREC, "3")
   field(LOLO, "0")
   field(HHSV, "MAJOR")
@@ -53,7 +53,7 @@ record(ao, "$(tctrlr):DMD:LOOP$(loop):SETPOINT") {
   field(DESC, "Demand setpoint Temp.")
   field(DTYP, "stream")
   field(FLNK, "$(tctrlr):STS:LOOP$(loop):SETPOINT")
-  field(OUT, "@M32.protocol setSetpointT($(loop)) $(port)")
+  field(OUT, "@CryoconM32.protocol setSetpointT($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -61,7 +61,7 @@ record(ao, "$(tctrlr):DMD:LOOP$(loop):PGAIN") {
   field(DESC, "Demand Proportional gain")
   field(DTYP, "stream")
   field(FLNK, "$(tctrlr):STS:LOOP$(loop):PGAIN PP")
-  field(OUT, "@M32.protocol setLoopPGain($(loop)) $(port)")
+  field(OUT, "@CryoconM32.protocol setLoopPGain($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -69,7 +69,7 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):PGAIN") {
   field(DESC, "PID Proportional gain.")
   field(SCAN, "$(scan) second")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopPGain($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopPGain($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -77,7 +77,7 @@ record(ao, "$(tctrlr):DMD:LOOP$(loop):IGAIN") {
   field(DESC, "Demand PID Integral gain.")
   field(DTYP, "stream")
   field(FLNK, "$(tctrlr):STS:LOOP$(loop):IGAIN PP")
-  field(OUT, "@M32.protocol setLoopIGain($(loop)) $(port)")
+  field(OUT, "@CryoconM32.protocol setLoopIGain($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -85,7 +85,7 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):IGAIN") {
   field(DESC, "PID Integral gain term.")
   field(SCAN, "$(scan) second")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopIGain($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopIGain($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -93,7 +93,7 @@ record(ao, "$(tctrlr):DMD:LOOP$(loop):DGAIN") {
   field(DESC, "Demand PID Derivative gain.")
   field(DTYP, "stream")
   field(FLNK, "$(tctrlr):STS:LOOP$(loop):DGAIN PP")
-  field(OUT, "@M32.protocol setLoopDGain($(loop)) $(port)")
+  field(OUT, "@CryoconM32.protocol setLoopDGain($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -101,7 +101,7 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):DGAIN") {
   field(DESC, "PID Derivative gain.")
   field(SCAN, "$(scan) second")
   field(DTYP, "stream")
-  field(INP, "@M32.protocol getLoopDGain($(loop)) $(port)")
+  field(INP, "@CryoconM32.protocol getLoopDGain($(loop)) $(port)")
   field(PREC, "3")
 }
 
@@ -109,7 +109,7 @@ record(ao, "$(tctrlr):SET:LOOP$(loop):RAMPRATE") {
   field(DESC, "Set Temp rate of change.")
   field(DTYP, "stream")
   field(FLNK, "$(tctrlr):STS:LOOP$(loop):RAMPRATE")
-  field(OUT, "@M32.protocol setLoopRampRate($(loop)) $(port)")
+  field(OUT, "@CryoconM32.protocol setLoopRampRate($(loop)) $(port)")
   field(PREC, "3")
 }
 
