--- a/CryoconM32App/Db/M32_control.template
+++ b/CryoconM32App/Db/M32_control.template
@@ -8,6 +8,8 @@
 
 # %gdatag,template,simplePv,$(gda_name).SETPOINT-DMD,$(gda_desc) setpoint demand
 # %gdatag,template,simplePv,$(gda_name).SETPOINT-RBV,$(gda_desc) setpoint readback
+# %gdatag,template,simplePv,$(gda_name).MANUAL-DMD,$(gda_desc) manual control demand
+# %gdatag,template,simplePv,$(gda_name).MANUAL-RBV,$(gda_desc) manual control readback
 # %gdatag,pv,ro,$(gda_name).SETPOINT-RBV,RECORD,Setpoint readback
 record(ai, "$(tctrlr):STS:LOOP$(loop):SETPOINT") {
   field(DESC, "Setpoint Temp, loop $(loop).")
@@ -189,6 +191,7 @@ record(stringin, "$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX") {
 }
 
 
+# %gdatag,pv,rw,$(gda_name).MANUAL-DMD,RECORD,Manual output demand
 record(ao, "$(tctrlr):DMD:LOOP$(loop):MANUAL") {
   field(DESC, "Manual control output demand")
   field(DTYP, "stream")
@@ -198,7 +201,7 @@ record(ao, "$(tctrlr):DMD:LOOP$(loop):MANUAL") {
   field(EGU, "%")
 }
 
-
+# %gdatag,pv,ro,$(gda_name).MANUAL-RBV,RECORD,Manual output readback
 record(ai, "$(tctrlr):STS:LOOP$(loop):MANUAL") {
   field(DESC, "Manual control output")
   field(SCAN, "$(scan) second")
