--- a/CryoconM32App/Db/M32_control.template
+++ b/CryoconM32App/Db/M32_control.template
@@ -190,7 +190,6 @@ record(stringin, "$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX") {
   field(VAL, ":SLOPE.HIHI")
 }
 
-
 # %gdatag,pv,rw,$(gda_name).MANUAL-DMD,RECORD,Manual output demand
 record(ao, "$(tctrlr):DMD:LOOP$(loop):MANUAL") {
   field(DESC, "Manual control output demand")
@@ -211,10 +210,24 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):MANUAL") {
   field(EGU, "%")
 }
 
+
+record(mbbo, "$(tctrlr):DMD:LOOP$(loop):LOOPTYPE") {
+  field(DESC, "Loop control type")
+  field(SCAN, "Passive")
+  field(DTYP, "stream")
+  field(FLNK, "$(tctrlr):STS:LOOP$(loop):LOOPTYPE")
+  field(OUT, "@CryoconM32.protocol setLoopType($(loop)) $(port)")
+  field(ZRST, "Off")
+  field(ONST, "PID")
+  field(TWST, "Man")
+  field(THST, "Table")
+  field(FRST, "RampP")
+}
+
 #! Further lines contain data used by VisualDCT
-#! View(1483,2621,1.3)
+#! View(2012,1842,1.3)
 #! Record("$(tctrlr):STS:LOOP$(loop):SETPOINT",1620,1774,0,1,"$(tctrlr):STS:LOOP$(loop):SETPOINT")
-#! Record("$(tctrlr):STS:LOOP$(loop):LOOPTYPE",2240,1608,0,1,"$(tctrlr):STS:LOOP$(loop):LOOPTYPE")
+#! Record("$(tctrlr):STS:LOOP$(loop):LOOPTYPE",2240,1608,0,0,"$(tctrlr):STS:LOOP$(loop):LOOPTYPE")
 #! Record("$(tctrlr):STS:LOOP$(loop):LOOPSOURCE",1840,2714,0,0,"$(tctrlr):STS:LOOP$(loop):LOOPSOURCE")
 #! Field("$(tctrlr):STS:LOOP$(loop):LOOPSOURCE.FLNK",16777215,1,"$(tctrlr):STS:LOOP$(loop):LOOPSOURCE.FLNK")
 #! Link("$(tctrlr):STS:LOOP$(loop):LOOPSOURCE.FLNK","$(tctrlr):CLC:LOOP$(loop):SRCRECORD")
@@ -286,10 +299,13 @@ record(ai, "$(tctrlr):STS:LOOP$(loop):MANUAL") {
 #! Field("$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX.VAL",16777215,1,"$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX.VAL")
 #! Field("$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX.FLNK",16777215,0,"$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX.FLNK")
 #! Link("$(tctrlr):PRM:LOOP$(loop):SLOPELIMSFX.FLNK","$(tctrlr):STS:LOOP$(loop):LOOPSOURCE")
-#! TextBox(TB0,2640,2740,2960,2800,0,"Dialog",12,1,16777215,"The output value of this calc record sets the OUTB link of the dfanout.\n\n",null)
-#! TextBox(TB2,1820,3120,2000,3220,0,"Dialog",12,1,16777215,"The only intended processing of these 3 string in records is on initialisation.\nThe FLNKs are to try to make sure the strings are all initialised before the scalcout record attempts to process.",null)
-#! TextBox(TB1,3340,2840,3520,2900,0,"Dialog",12,1,16777215,"Output link B is the HIHI limit on the SLOPE record on the sensor template.",null)
 #! Record("$(tctrlr):DMD:LOOP$(loop):MANUAL",1660,2080,0,1,"$(tctrlr):DMD:LOOP$(loop):MANUAL")
 #! Field("$(tctrlr):DMD:LOOP$(loop):MANUAL.FLNK",16777215,1,"$(tctrlr):DMD:LOOP$(loop):MANUAL.FLNK")
 #! Link("$(tctrlr):DMD:LOOP$(loop):MANUAL.FLNK","$(tctrlr):STS:LOOP$(loop):MANUAL")
 #! Record("$(tctrlr):STS:LOOP$(loop):MANUAL",1680,2260,0,1,"$(tctrlr):STS:LOOP$(loop):MANUAL")
+#! TextBox(TB0,2640,2740,2960,2800,0,"Dialog",12,1,16777215,"The output value of this calc record sets the OUTB link of the dfanout.\n\n",null)
+#! TextBox(TB2,1820,3120,2000,3220,0,"Dialog",12,1,16777215,"The only intended processing of these 3 string in records is on initialisation.\nThe FLNKs are to try to make sure the strings are all initialised before the scalcout record attempts to process.",null)
+#! TextBox(TB1,3340,2840,3520,2900,0,"Dialog",12,1,16777215,"Output link B is the HIHI limit on the SLOPE record on the sensor template.",null)
+#! Record("$(tctrlr):DMD:LOOP$(loop):LOOPTYPE",1960,1465,0,1,"$(tctrlr):DMD:LOOP$(loop):LOOPTYPE")
+#! Field("$(tctrlr):DMD:LOOP$(loop):LOOPTYPE.FLNK",16777215,1,"$(tctrlr):DMD:LOOP$(loop):LOOPTYPE.FLNK")
+#! Link("$(tctrlr):DMD:LOOP$(loop):LOOPTYPE.FLNK","$(tctrlr):STS:LOOP$(loop):LOOPTYPE")
