--- a/etc/makeDocumentation/Makefile
+++ b/etc/makeDocumentation/Makefile
@@ -8,19 +8,20 @@ DEBUG :=
 DOCDIR := $(TOP)/documentation/doxygen
 
 # add the documentation files to the install target
-install: $(DOCDIR)/build_instructions $(TOP)/documentation/index.html
+install: $(DOCDIR)
 
 # rule for documentation
-$(TOP)/documentation/index.html: config.src manual.src $(DOCDIR)/build_instructions
+$(DOCDIR): config.src manual.src $(DOCDIR)/build_instructions
 	mkdir -p $(DOCDIR)
 	dls-make-doxygen-documentation.py -o $(DOCDIR) config.src manual.src
-	cd $(TOP)/documentation; ln -s doxygen/index.html
-
+#	/dls_sw/work/common/python/documentation/src/documentation.py -o $(DOCDIR) config.src manual.src
+	
 # rule for generating build instructions from example.xml file
 $(DOCDIR)/build_instructions: $(TOP)/etc/makeIocs/example.xml
 	mkdir -p $(DOCDIR)
 	dls-xml-iocbuilder.py --doc=$@ $(DEBUG) $^
+#	/dls_sw/work/common/python/xmlbuilder/xmlbuilder/xmlbuilder.py  --doc=$@ $(DEBUG) $^
 
 # Remove entire documentation/doxygen dir on clean
 clean:
-	rm -rf $(DOCDIR) $(TOP)/documentation/index.html
+	rm -rf $(DOCDIR)
