CryoconM32 release file and build: Changes for EPICS 3.14.11

--- a/CryoconM32App/src/Makefile
+++ b/CryoconM32App/src/Makefile
@@ -15,7 +15,7 @@ DBD += CryoconM32.dbd
 CryoconM32_DBD += base.dbd
 CryoconM32_DBD += asyn.dbd
 CryoconM32_DBD += stream.dbd
-CryoconM32_DBD += calc.dbd
+CryoconM32_DBD += calcSupport.dbd
 
 # CryoconM32_registerRecordDeviceDriver.cpp will be created
 # CryoconM32.dbd
