CryoconM32: example directory: Changes in preparation for release to EPICS 3.14.11 to build the example for vxWorks only and sort out the perennial problem of how to release an example directory that needs to refer to its own prod release, which has not been released yet.

--- a/example/exampleApp/src/Makefile
+++ b/example/exampleApp/src/Makefile
@@ -8,7 +8,7 @@ include $(TOP)/configure/CONFIG
 
 -include $(STREAM)/StreamDevice/src/CONFIG_STREAM
 
-PROD_IOC = example
+PROD_IOC_vxWorks = example
 
 # example.dbd will be installed into <top>/dbd
 DBD += example.dbd
